--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,6 +171,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		text-align: justify;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -3672,4 +3673,30 @@ padding: 100px 20px;
     width: 100%;
 	height: 100%;
 	border-radius: 1em;
+}
+
+.layout {
+	width: 25%;
+}
+
+.video_layout {
+	width: 50%;
+	margin-bottom: 2em;
+}
+
+@media screen and (max-width: 1680px) {
+	.layout {
+		width: 33.3333%;
+	}
+}
+
+@media screen and (max-width: 980px) {
+	.layout {
+		width: 50%;
+	}
+
+	.video_layout {
+		width: 100%;
+		margin-bottom: 2em;
+	}
 }
