--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3094,7 +3094,7 @@ input, select, textarea {
 		display: flex;
 		padding: 6em 0 2em 0 ;
 		background-attachment: fixed;
-		background-position: center center;
+		background-position: right center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		border-bottom: 0 !important;
@@ -3688,6 +3688,10 @@ padding: 100px 20px;
 	.layout {
 		width: 33.3333%;
 	}
+
+	.text {
+		font-size: 14px;
+	}
 }
 
 @media screen and (max-width: 980px) {
@@ -3697,6 +3701,5 @@ padding: 100px 20px;
 
 	.video_layout {
 		width: 100%;
-		margin-bottom: 2em;
 	}
 }
