--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3610,6 +3610,23 @@ padding: 100px 20px;
 }
 
 .more {display: none;}
+.h3 {font-size: 1.35em;
+	color: #ffffff;
+	font-weight: 600;
+	line-height: 1.65;
+	margin: 0 0 1em 0;}
+
+@media screen and (max-width: 736px) {
+	.h3 {
+		font-size: 1.25em;
+	}
+}
+.bq {
+	border-left: 8px solid #585e80c0;
+	padding: 0.7em 2.5em;
+	quotes: "\201C""\201D""\2018""\2019";
+	font-style:italic;
+}
 
 .top-link {
 	transition: all 0.5s ease-in-out;
